RESOLVED FIXED62094
[Mac WebKit2] REGRESSION (r86692): Synchronous XMLHttpRequest hangs in credential shim (affects Netgear ReadyNAS admin page)
https://bugs.webkit.org/show_bug.cgi?id=62094
Summary [Mac WebKit2] REGRESSION (r86692): Synchronous XMLHttpRequest hangs in creden...
Darin Adler
Reported 2011-06-04 12:26:35 PDT
REGRESSION (r86692): Synchronous XMLHttpRequest hangs in credential shim (affects Netgear ReadyNAS admin page)
Attachments
Patch (24.45 KB, patch)
2011-06-04 12:30 PDT, Darin Adler
no flags
Patch (24.80 KB, patch)
2011-06-04 13:16 PDT, Darin Adler
andersca: review+
Darin Adler
Comment 1 2011-06-04 12:30:40 PDT
Anders Carlsson
Comment 2 2011-06-04 12:37:14 PDT
Comment on attachment 96030 [details] Patch I don't think CoreIPCThread is a good name, it might be mistaken for the CoreIPC work queue that sends/receives message. a CoreIPC connection has the notion of a "client run loop" where incoming messages will be dispatched. Maybe callOnCoreIPCClientRunLoopAndWait is a better name.
Darin Adler
Comment 3 2011-06-04 12:48:00 PDT
(In reply to comment #2) > Maybe callOnCoreIPCClientRunLoopAndWait is a better name. Sure thing; I’ll change to that name. Any ideas for better names for the source files CoreIPCThread.h/mm?
Darin Adler
Comment 4 2011-06-04 13:16:13 PDT
Darin Adler
Comment 5 2011-06-04 14:03:35 PDT
Darin Adler
Comment 6 2011-06-04 14:04:03 PDT
Comment on attachment 96031 [details] Patch The patch I landed also included a FIXME comment explaining we could do this with work items instead.
Note You need to log in before you can comment on or make changes to this bug.