2011-06-04  Darin Adler  <darin@apple.com>

Reviewed by Anders Carlsson.

        [Mac WebKit2] REGRESSION (r86692): Synchronous XMLHttpRequest hangs in credential shim (affects Netgear ReadyNAS admin page)
        https://bugs.webkit.org/show_bug.cgi?id=62094
        rdar://problem/9539204

        * WebCore.exp.in: Export ResourceHandle::synchronousLoadRunLoopMode.
        * platform/network/ResourceHandle.h: Add synchronousLoadRunLoopMode.
        * platform/network/cf/ResourceHandleCFNet.cpp:
        (WebCore::ResourceHandle::synchronousLoadRunLoopMode): Added.
        (WebCore::ResourceHandle::loadResourceSynchronously): Call synchronousLoadRunLoopMode.
        * platform/network/mac/ResourceHandleMac.mm:
        (WebCore::ResourceHandle::synchronousLoadRunLoopMode): Added.
        (WebCore::ResourceHandle::loadResourceSynchronously): Call synchronousLoadRunLoopMode.
2011-06-04  Darin Adler  <darin@apple.com>

        Reviewed by Anders Carlsson.

        [Mac WebKit2] REGRESSION (r86692): Synchronous XMLHttpRequest hangs in credential shim (affects Netgear ReadyNAS admin page)
        https://bugs.webkit.org/show_bug.cgi?id=62094
        rdar://problem/9539204

        * WebKit2.xcodeproj/project.pbxproj: Added new source files.
        * WebProcess/mac/CoreIPCClientRunLoop.h: Added.
        * WebProcess/mac/CoreIPCClientRunLoop.mm: Added.
        (-[WKFunctionAdapter perform]): Added.
        (WebKit::createCoreIPCRunLoopModesArray): Added.
        (WebKit::coreIPCRunLoopModesArray): Added.
        (WebKit::callOnCoreIPCClientRunLoopAndWait): Added.

        * WebProcess/mac/KeychainItemShimMethods.mm:
        (WebKit::webFreeAttributeListContent): Use callOnCoreIPCClientRunLoopAndWait.
        (WebKit::webFreeKeychainItemContent): Ditto.
        (WebKit::webSecKeychainItemCopyContent): Ditto.
        (WebKit::webSecKeychainItemCreateFromContent): Ditto.
        (WebKit::webSecKeychainItemModifyContent): Ditto.
        * WebProcess/mac/SecItemShimMethods.mm:
        (WebKit::webSecItemCopyMatching): Ditto.
        (WebKit::webSecItemAdd): Ditto.
        (WebKit::webSecItemUpdate): Ditto.
        (WebKit::webSecItemDelete): Ditto.


git-svn-id: svn://svn.chromium.org/blink/trunk@88123 bbb929c8-8fbe-4397-9dbb-9b2b20218538