third_party/WebKit/Source/WebCore/platform/network/ResourceHandle.h
@@ -1,6 +1,6 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2004, 2006 Apple Computer, Inc.  All rights reserved.
+ * Copyright (C) 2004, 2006, 2011 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -49,7 +49,6 @@ typedef void* LPVOID;
 typedef LPVOID HINTERNET;
 #endif
 
-
 #if PLATFORM(MAC)
 #include <wtf/RetainPtr.h>
 #ifdef __OBJC__
@@ -80,7 +79,6 @@ namespace WebCore {
 
 class AuthenticationChallenge;
 class Credential;
-class FormData;
 class Frame;
 class KURL;
 class ProtectionSpace;
@@ -207,6 +205,10 @@ public:
 
     using RefCounted<ResourceHandle>::ref;
     using RefCounted<ResourceHandle>::deref;
+
+#if PLATFORM(MAC) || USE(CFNETWORK)
+    static CFStringRef synchronousLoadRunLoopMode();
+#endif
 
 protected:
     ResourceHandle(const ResourceRequest&, ResourceHandleClient*, bool defersLoading, bool shouldContentSniff);
