third_party/WebKit/Source/WebCore/platform/network/cf/ResourceHandleCFNet.cpp
@@ -1,6 +1,6 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2004, 2005, 2006, 2007, 2009 Apple Inc. All rights reserved.
+ * Copyright (C) 2004, 2005, 2006, 2007, 2009, 2010, 2011 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,8 +28,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #if USE(CFNETWORK)
 
-#include "ResourceHandle.h"
-#include "ResourceHandleClient.h"
 #include "ResourceHandleInternal.h"
 
 #include "AuthenticationCF.h"
@@ -45,6 +43,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Logging.h"
 #include "MIMETypeRegistry.h"
 #include "ResourceError.h"
+#include "ResourceHandleClient.h"
 #include "ResourceResponse.h"
 #include "SharedBuffer.h"
 #include <CFNetwork/CFNetwork.h>
@@ -66,8 +65,6 @@ __declspec(dllimport) CFURLConnectionRef CFURLConnectionCreateWithProperties(
 }
 
 namespace WebCore {
-
-static CFStringRef WebCoreSynchronousLoaderRunLoopMode = CFSTR("WebCoreSynchronousLoaderRunLoopMode");
 
 class WebCoreSynchronousLoaderClient : public ResourceHandleClient {
 public:
@@ -622,6 +619,11 @@ CFURLConnectionRef ResourceHandle::releaseConnectionForDownload()
     return d->m_connection.releaseRef();
 }
 
+CFStringRef ResourceHandle::synchronousLoadRunLoopMode()
+{
+    return CFSTR("WebCoreSynchronousLoaderRunLoopMode");
+}
+
 void ResourceHandle::loadResourceSynchronously(NetworkingContext* context, const ResourceRequest& request, StoredCredentials storedCredentials, ResourceError& error, ResourceResponse& response, Vector<char>& vector)
 {
     LOG(Network, "ResourceHandle::loadResourceSynchronously:%s allowStoredCredentials:%u", request.url().string().utf8().data(), storedCredentials);
@@ -645,12 +647,12 @@ void ResourceHandle::loadResourceSynchronously(NetworkingContext* context, const
 
     handle->createCFURLConnection(storedCredentials == AllowStoredCredentials, ResourceHandle::shouldContentSniffURL(request.url()));
 
-    CFURLConnectionScheduleWithRunLoop(handle->connection(), CFRunLoopGetCurrent(), WebCoreSynchronousLoaderRunLoopMode);
-    CFURLConnectionScheduleDownloadWithRunLoop(handle->connection(), CFRunLoopGetCurrent(), WebCoreSynchronousLoaderRunLoopMode);
+    CFURLConnectionScheduleWithRunLoop(handle->connection(), CFRunLoopGetCurrent(), synchronousLoadRunLoopMode());
+    CFURLConnectionScheduleDownloadWithRunLoop(handle->connection(), CFRunLoopGetCurrent(), synchronousLoadRunLoopMode());
     CFURLConnectionStart(handle->connection());
 
     while (!client->isDone())
-        CFRunLoopRunInMode(WebCoreSynchronousLoaderRunLoopMode, UINT_MAX, true);
+        CFRunLoopRunInMode(synchronousLoadRunLoopMode(), UINT_MAX, true);
 
     CFURLConnectionCancel(handle->connection());
     
