third_party/WebKit/Source/WebKit2/WebProcess/mac/SecItemShimMethods.mm
@@ -23,11 +23,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
+
 #import "config.h"
 #import "SecItemShimMethods.h"
 
 #if !defined(BUILDING_ON_SNOW_LEOPARD)
 
+#import "CoreIPCClientRunLoop.h"
 #import "SecItemRequestData.h"
 #import "SecItemResponseData.h"
 #import "WebProcess.h"
@@ -35,7 +37,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "WebProcessShim.h"
 #import <Security/SecItem.h>
 #import <dlfcn.h>
-#import <wtf/Threading.h>
 
 namespace WebKit {
 
@@ -71,7 +72,7 @@ static OSStatus webSecItemCopyMatching(CFDictionaryRef query, CFTypeRef* result)
     SecItemAPIContext context;
     context.query = query;
     
-    callOnMainThreadAndWait(webSecItemCopyMatchingMainThread, &context);
+    callOnCoreIPCClientRunLoopAndWait(webSecItemCopyMatchingMainThread, &context);
     
     if (result)
         *result = context.resultObject;
@@ -99,7 +100,7 @@ static OSStatus webSecItemAdd(CFDictionaryRef query, CFTypeRef* result)
     SecItemAPIContext context;
     context.query = query;
     
-    callOnMainThreadAndWait(webSecItemAddOnMainThread, &context);
+    callOnCoreIPCClientRunLoopAndWait(webSecItemAddOnMainThread, &context);
     
     if (result)
         *result = context.resultObject;
@@ -127,7 +128,7 @@ static OSStatus webSecItemUpdate(CFDictionaryRef query, CFDictionaryRef attribut
     context.query = query;
     context.attributesToUpdate = attributesToUpdate;
     
-    callOnMainThreadAndWait(webSecItemUpdateOnMainThread, &context);
+    callOnCoreIPCClientRunLoopAndWait(webSecItemUpdateOnMainThread, &context);
     
     return context.resultCode;
 }
@@ -152,7 +153,7 @@ static OSStatus webSecItemDelete(CFDictionaryRef query)
     SecItemAPIContext context;
     context.query = query;
     
-    callOnMainThreadAndWait(webSecItemDeleteOnMainThread, &context);
+    callOnCoreIPCClientRunLoopAndWait(webSecItemDeleteOnMainThread, &context);
 
     return context.resultCode;
 }
